<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">골목카페</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="join_user">join_user</string>
    <string name="mail">mail</string>
    <string name="ok" tools:ignore="ButtonCase">OK</string>
    <string name="cansle">cansle</string>
    <string name="join">join</string>
    <string name="login">login</string>
    <string name="pwd">pwd</string>
    <string name="todo">todo</string>
    <string name="my_page">mypage</string>
    <string name="setting">setting</string>
    <string name="review">review</string>
    <string name="location">location</string>
    <string name="userName">userName</string>
    <string name="userMail">userMail</string>
    <string name="heart">heart</string>
    <string name="information">information</string>
    <string name="service_center">service_center</string>
    <string name="share">share</string>
    <string name="search_hint">검색</string>
    <string name="loadcafe">골목카페</string>
    <string name="notice">알림</string>
    <string name="menu">menu</string>
    <string name="open">open</string>
    <string name="closed">close</string>
</resources>