<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mypage"
            android:icon="@drawable/user"
            android:title="@string/my_page"
            />
        <item
            android:id="@+id/review"
            android:icon="@drawable/feedback"
            android:title="@string/review"
            />
        <item
            android:id="@+id/location"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/location"
            />

        <item
            android:id="@+id/setting"
            android:icon="@drawable/settings"
            android:title="@string/setting"
            />
    </group>
</menu>