<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars"
        android:id="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
        android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />
    <TextView
        android:text="@string/userName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
        android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:textColor="#fff"/>
    <TextView
        android:text="@string/userMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="10sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#fff"
        tools:ignore="SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout >